--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -113,11 +113,10 @@
 				<p class="title">Password</p>
 				<input class="input" type="email" placeholder="ingresa nuevo password"/>
 				<input class="input u-margin-top-20" type="email" placeholder="repetir nuevo password"/>
-				<p class="title">Direcciones de envios</p>
+				<!-- <p class="title">Direcciones de envios</p> -->
 
-				<div class="addresses">
+				<!-- <div class="addresses">
 					<div class="address">
-						<!-- <input type="radio" name="address"> -->
 						<div>
 							<p class="address-title">Luis Eduardo Augusto</p>
 							<p class="address-subtitle">460 Lizardo Montero - apt 304</p>
@@ -127,7 +126,6 @@
 						</div>
 					</div>
 					<div class="address">
-						<!-- <input type="radio" name="address"> -->
 						<p class="address-title">Agregar nueva dirección de envío</p>
 					</div>
 					<div class="address" style="padding-bottom: 20px;">
@@ -176,7 +174,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			</div>
 
