--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -60,8 +60,8 @@
 		</div>
 	</div>
 	<div class="grid-100 u-margin-top-10">
-		<ul class="am-Pagination" style="text-align:right;">
-		</ul>
+		<!-- <ul class="am-Pagination" style="text-align:right;">
+		</ul> -->
 	</div>
 </div>
 
