add socials in single product

--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -13,13 +13,55 @@
 					<div class="single-image-inner">
 						<img src="{{product.photo}}">
 						<div class="actions u-padding-top-20 u-padding-bottom-20">
-							<div class="action">
-								<i class="fa fa-diamond valuation"></i>
-								<p>VALORAR</p>
+							<div class="action active">
+								<i class="icon fa fa-diamond valuation"></i>
+								<p class="text">VALORAR</p>
+								<div class="actions-box">
+									<button class="color-blue bg-gray">AÑADIR A LA COLECCIÓN</button>
+									<button class="u-margin-top-10">+ SEGUIR</button>
+									<button class="following u-margin-top-10">
+										<i class="fa fa-check-circle"></i>&nbsp;SIGUIENDO
+									</button>
+								</div>
+								<div class="actions-box">
+									<p class="title">Añadir a las colecciones</p>
+									<div class="u-separator u-margin-top-7"></div>
+									<input class="u-margin-top-10" type="text" placeholder="Crear una colección nueva">
+									<button class="u-margin-top-10 color-black bg-gray wd-auto">AÑADIR</button>
+									<ul class="collections u-margin-top-20">
+										<li class="collection selected">
+											<p>Amazonía Pura</p><i class="fa fa-check"></i>
+										</li>
+										<li class="collection">
+											<p>Mis obras favoritas</p><i class="fa fa-check"></i>
+										</li>
+										<li class="collection">
+											<p>Amazonía Pura</p><i class="fa fa-check"></i>
+										</li>
+										<li class="collection">
+											<p>Mis obras favoritas</p><i class="fa fa-check"></i>
+										</li>
+									</ul>
+									<div class="u-separator u-margin-top-20"></div>
+									<div class="buttons u-margin-top-20">
+										<button class="wd-auto bg-blue color-white">GUARDAR</button>
+										<button class="wd-auto color-black border-black">SALIR</button>
+									</div>
+								</div>
 							</div>
 							<div class="action">
-								<i class="fa fa-share-alt share"></i>
-								<p>COMPARTIR</p>
+								<i class="icon fa fa-share-alt share"></i>
+								<p class="text">COMPARTIR</p>
+								<div class="actions-box">
+									<p class="title">Compartir obras</p>
+									<div class="u-separator u-margin-top-7"></div>
+									<div class="share">
+										<i class="fa fa-facebook"></i>Compartir en facebook
+									</div>
+									<div class="share">
+										<i class="fa fa-twitter"></i>Compartir en twitter
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
