add tags in single work

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -148,6 +148,44 @@
 			</div>
 		</div>
 	</div>
+
+
+	<!-- ********************************************************************
+		$ TAGS
+	********************************************************************* -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="tags-container">
+				<p class="title">Tags&nbsp;&nbsp;<span>25</span></p>
+				<div class="u-separator"></div>
+				<div class="tags">
+					<div class="tag">BIRDS</div>
+					<div class="tag">NATURALEZA</div>
+					<div class="tag">OIL ON CANVAS</div>
+					<div class="tag">ANGRY BIRD</div>
+					<div class="tag">TAPPERWARE</div>
+					<div class="tag">TAPPERWARE</div>
+					<div class="tag">ANGRY BIRD</div>
+					<div class="tag">YELLOW</div>
+					<div class="tag">OIL ON CANVAS</div>
+					<div class="tag">BIRDS</div>
+					<div class="tag">TAPPERWARE</div>
+					<div class="tag">BIRDS</div>
+					<div class="tag">OIL ON CANVAS</div>
+					<div class="tag">NATURALEZA</div>
+					<div class="tag">BIRDS</div>
+					<div class="tag">OIL ON CANVAS</div>
+					<div class="tag">BIRDS</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- ********************************************************************
+		$ MORE
+	********************************************************************* -->
+	<div class="u-separator"></div>
+
 	<div class="grid-container u-margin-top-60">
 		<div class="grid-100">
 			<p class="am-more-text u-text-center u-padding-bottom-10">Otras obras del artista</p>
@@ -165,6 +203,7 @@
 	</div>
 
 	<div class="u-separator u-margin-top-60"></div>
+
 	<div class="grid-container u-margin-top-60">
 		<div class="grid-100">
 			<p class="am-more-text u-text-center u-padding-bottom-10">Obras relacionadas</p>
