--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -622,6 +622,36 @@ body
 .am-Report
 	background #eee
 
+.tags-container
+	max-width 780px
+	margin auto
+	.title
+		text-align center
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 22px
+		color #3a3d3f
+		padding 30px 0
+		span
+			background #1f79ed
+			border-radius 17px
+			padding 3px 10px
+			font-size 10px
+			color white
+	.tags
+		max-width 680px
+		margin 30px auto
+		.tag
+			border-radius 3.6px
+			background #ddd
+			font-family 'Montserrat', sans-serif
+			font-size 12px
+			color #333
+			display inline-block
+			padding 6px
+			margin 5px
+			letter-spacing 1.5px
+
 
 .am-Manifest
 	background rgba(51, 51, 51, 0.95);
