--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -64,7 +64,7 @@
 	<div class="discover-content grid-container u-padding-top-10 u-padding-bottom-70">
 		<div class="grid-100 grid-parent">
       <div class="grid work-layout-discover">
-
+				<div class="grid-sizer"></div>
       </div>
 		</div>
 	</div>
