refactor auth and exress

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -173,7 +173,7 @@
 		</div>
 	</script>
 	<script type="text/template" id="template-carrouselItem">
-		<div class="am-MoreImages" style="background-image: url(<%=photo%>);"></div>
+		<div class="am-MoreImages" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill,q_80')%>);"></div>
 	</script>
 
 	{% block scripts %} {% endblock %}
