--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -3,7 +3,7 @@
 {% set path = 'market' %}
 
 {% block elements %}
-	<div class="am-Profile-banner" style="background-image: url('{{profile.cover}}')">
+	<div class="am-Profile-banner" style="background-image: url('http://127.0.0.1:3000/img/banners/am_cover.jpg')">
 		<i class="fa fa-pencil-square-o"></i>
 		<div class="grid-container">
 			<div class="grid-100">
