--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -5,7 +5,7 @@
 			<div class="single-info">
 				<div class="single-image">
 					<div class="single-image-inner">
-						<img src="{{work.photo}}">
+						<img src="{{work.photo|addFilter('w_500,h_800,q_80,c_limit')}}">
 						<div class="actions u-padding-top-20 u-padding-bottom-20">
 							<div class="action active">
 								<i class="icon fa fa-diamond valuation"></i>
