--- a/app/views/pages/confirm-email.html
+++ b/app/views/pages/confirm-email.html
@@ -19,8 +19,13 @@
 				<span class="line"></span>
 			</div>
 			<p class="subtitle">Si no te llegó el correo, revisa en tu carpeta de SPAM ó pide que te reenviemos el correo.</p>
+			<p class="subtitle msg-succes">mensaje enviado</p>
+			<p class="subtitle msg-error">no se pudo enviar, intetelo nuevamente</p>
 			<button class="button-resend">
 				<a>REENVIAR CORREO</a>
+			</button>
+			<button class="button-resend">
+				<a><i class="fa fa-spinner"></i></a>
 			</button>
 		</div>
 	</div>
