--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -15,6 +15,9 @@
 					<i class="fa fa-facebook"></i>&nbsp;&nbsp; REGISTRARME CON FACEBOOK
 				</a>
 			</button>
+			<button class="button u-margin-top-10" data-color="blue">
+				<a href="/auth/facebook"><i class="load fa fa-spinner"></i></a>
+			</button>
 			<div class="separator">
 				<span class="line"></span><span class="text">CORREO</span><span class="line"></span>
 			</div>
@@ -26,6 +29,9 @@
 				<div class="g-recaptcha u-margin-top-10 recaptcha" data-sitekey="6LdnUQoTAAAAALPzF3glOaqzGcbhBrmT1yQwVYls"></div>
 				<button class="button u-margin-top-10" data-color="green">
 					<a>REGISTRARME CON MI CORREO</a>
+				</button>
+				<button class="button u-margin-top-10" data-color="green">
+					<a><i class="load fa fa-spinner"></i></a>
 				</button>
 			</form>
 			<p class="msg">Al registrarme estoy aceptando los términos y condiciones de la plataforma.</p>
