add preloaders in login view

--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -15,6 +15,9 @@
 					<i class="fa fa-facebook"></i>&nbsp;&nbsp; INGRESAR CON FACEBOOK
 				</a>
 			</button>
+			<button class="button u-margin-top-10" data-color="blue">
+				<a href="/auth/facebook"><i class="load fa fa-spinner"></i></a>
+			</button>
 			<div class="separator">
 				<span class="line"></span><span class="text">CORREO</span><span class="line"></span>
 			</div>
@@ -24,6 +27,9 @@
 				<input name='password' class="input u-margin-top-10" type="password" placeholder="Contraseña" required></input>
 				<button class="button u-margin-top-10" data-color="green">
 					<a>INGRESAR A MI CUENTA</a>
+				</button>
+				<button class="button u-margin-top-10" data-color="green">
+					<a><i class="load fa fa-spinner"></i></a>
 				</button>
 			</form>
 
