--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -35,7 +35,7 @@
 			</div>
 			<div class="grid-50 mobile-grid-100">
 				<p class="title">Fecha de nacimiento</p>
-				<input class="input" type="text" placeholder="dd/mm/yy"/>
+				<input class="input" type="text" placeholder="dd/mm/yy"/ maxlength="8">
 			</div>
 
 			<div class="grid-50 mobile-grid-100">
@@ -108,6 +108,10 @@
 
 			<div class="grid-100 mobile-grid-100">
 				<button class="button u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
+			</div>
+
+			<div class="grid-100 mobile-grid-100">
+				<button class="button u-margin-top-30" data-color="green"><i class="load fa fa-spinner"></i></button>
 			</div>
 
 		</div>
