--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -95,15 +95,33 @@
 			</div>
 
 			<div class="interests">
-				<div class="interest"><p>Pintura y Técnica mixta</p></div>
-				<div class="interest"><p>Diseño e Ilustración</p></div>
-				<div class="interest"><p>Collage</p></div>
-				<div class="interest"><p>Fotografía</p></div>
-				<div class="interest"><p>Street Art</p></div>
-				<div class="interest"><p>Arte Digital</p></div>
-				<div class="interest"><p>Dibujo</p></div>
-				<div class="interest"><p>Esculturas</p></div>
-				<div class="interest"><p>Grabados</p></div>
+				<div class="interest" style="background-image: url('/img/interests/interest1.jpg')">
+					<div class="cover"><p>Pintura y Técnica mixta</p></div>
+				</div>
+				<div class="interest selected" style="background-image: url('/img/interests/interest2.jpg')">
+					<div class="cover"><p>Diseño e Ilustración</p></div>
+				</div>
+				<div class="interest" style="background-image: url('/img/interests/interest3.jpg')">
+					<div class="cover"><p>Collage</p></div>
+				</div>
+				<div class="interest" style="background-image: url('/img/interests/interest4.jpg')">
+					<div class="cover"><p>Fotografía</p></div>
+				</div>
+				<div class="interest" style="background-image: url('/img/interests/interest5.jpg')">
+					<div class="cover"><p>Street Art</p></div>
+				</div>
+				<div class="interest selected" style="background-image: url('/img/interests/interest6.jpg')">
+					<div class="cover"><p>Arte Digital</p></div>
+				</div>
+				<div class="interest" style="background-image: url('/img/interests/interest7.jpg')">
+					<div class="cover"><p>Dibujo</p></div>
+				</div>
+				<div class="interest" style="background-image: url('/img/interests/interest8.jpg')">
+					<div class="cover"><p>Esculturas</p></div>
+				</div>
+				<div class="interest" style="background-image: url('/img/interests/interest9.jpg')">
+					<div class="cover"><p>Grabados</p></div>
+				</div>
 			</div>
 
 			<div class="grid-100 mobile-grid-100">
