--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -304,6 +304,8 @@ body
 			color #666
 			&:not(:last-child)
 				padding-bottom 5px
+			i
+				font-size 1.1em
 		.name
 			font-weight bold
 	&-works
