--- a/app/styles/buttons.styl
+++ b/app/styles/buttons.styl
@@ -13,6 +13,8 @@
 	color white
 	// border solid 1px #979797
 	box-shadow 1px 2px 1px 0 rgba(black, .5)
+	i
+		font-size: 1.25em;
 
 
 .am-Upload-button
