--- a/app/views/partials/banner.html
+++ b/app/views/partials/banner.html
@@ -9,7 +9,8 @@
 					<p class="am-DiscoverTitle-text u-padding-bottom-15 u-text-center">{{ bannerTitle }}</p>
 					<div class="am-Search-input">
 						<input type="text"/>
-						<i class="fa fa-search"></i>
+						<!-- <i class="fa fa-search"></i> -->
+						<i class="bi_interface-search"></i>
 					</div>
 				</div>
 			</div>
