--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -10,6 +10,8 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+	<link rel="stylesheet" href="/css/budicon.css">
+
 	<link rel="stylesheet" type="text/css" href="/app.min.css">
 
 	{% block styles %} {% endblock %}
@@ -115,7 +117,7 @@
 		  			<div>
 		  				<p class="name uppercase"><%=firstname%></p>
 		  				<p class="city"><%=city%>, <%=country%></p>
-		  				<p class="stats"><i class="fa fa-diamond"></i> <%=numOfFollowers%></p>
+		  				<p class="stats"><i class="bi_ecommerce-diamon"></i> <%=numOfFollowers%></p>
 		  			</div>
 		  		</div>
 				</a>
