--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -8,7 +8,8 @@
 						<img src="{{work.photo|addFilter('w_500,h_800,q_80,c_limit')}}">
 						<div class="actions u-padding-top-20 u-padding-bottom-20">
 							<div class="action active">
-								<i class="icon fa fa-diamond valuation"></i>
+								<!-- <i class="icon fa fa-diamond valuation"></i> -->
+								<i class="icon bi_ecommerce-diamon valuation"></i>
 								<p class="text">VALORAR</p>
 								<div class="actions-box">
 									<button class="color-blue bg-gray">AÑADIR A LA COLECCIÓN</button>
@@ -44,7 +45,8 @@
 								</div>
 							</div>
 							<div class="action">
-								<i class="icon fa fa-share-alt share"></i>
+								<!-- <i class="icon fa fa-share-alt share"></i> -->
+								<i class="icon bi_web-share share"></i>
 								<p class="text">COMPARTIR</p>
 								<div class="actions-box">
 									<p class="title">Compartir obras</p>
