--- a/app/styles/inputs.styl
+++ b/app/styles/inputs.styl
@@ -12,7 +12,8 @@
 		font-family 'Montserrat', sans-serif
 	i
 		background #85d78d
-		padding 8px 20px 12px 16px
+		// padding 8px 20px 12px 16px
+		padding 10px 15px 10px 10px
 		color white
 		cursor pointer
 		font-size 1.35em
