--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -58,7 +58,8 @@
 					{% else %}
 						<li class="am-Header-menu-item">
 							<a class="am-Signin-button" href="/auth/login">
-								<i class="fa fa-user"></i> INGRESAR
+								<!-- <i class="fa fa-user"></i> INGRESAR -->
+								<i class="bi_user-single-a"></i> INGRESAR
 							</a>
 						</li>
 					{% endif %}
