--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -122,7 +122,7 @@
 								<img src="{{work.User.photo}}">
 							</a>
 							<div>
-								<p class="u-padding-bottom-4" style="font-weight: bold;">{{work.User.firstname}}</p>
+								<p class="u-padding-bottom-4 uppercase" style="font-weight: bold;">{{work.User.firstname}}</p>
 								<p class="u-padding-bottom-7"> <strong></strong> {{work.User.city}}, {{work.User.country}}</p>
 								<button class="am-Follow-button">+ SEGUIR</button>
 							</div>
