--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -749,6 +749,7 @@ body
 		font-size 20px
 		font-weight bold
 		color white
+		text-transform: uppercase;
 	.city
 		font-family 'Montserrat', sans-serif
 		font-size 18px
