--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -58,6 +58,52 @@
 			</div>
 		</form>
 	</div>
+
+	<div class="am-upload-work-box grid-container u-margin-top-20">
+		<div class="grid-100">
+			<p class="main-title">TU OBRA SE HA PUBLICÓ CON ÉXITO</p>
+			<div class="u-separator"></div>
+			<div class="work-collection-card u-margin-top-40">
+				<div class="work-collection-card-img">
+					<img src="/img/works/work9.jpg">
+				</div>
+				<div class="work-collection-card-data">
+					<p class="work-collection-card-title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</p>
+					<p class="work-collection-card-artist">Sergio Gonzales Mucho</p>
+				</div>
+			</div>
+			<div class="separator u-margin-top-20">
+				<span class="line"></span><span class="text">¿QUE QUIERES HACER AHORA?</span><span class="line"></span>
+			</div>
+		</div>
+			<div class="u-padding-top-20" style="oferoverflow: hidden;">
+				<div class="grid-50">
+					<button class="button inline upload u-margin-top-30 upload_button">
+						<i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER OBRA
+					</button>
+				</div>
+				<div class="grid-50">
+					<button class="button inline upload u-margin-top-30 upload_button" data-color="green">
+						<i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;VENDER OBRA
+					</button>
+				</div>
+				<div class="grid-50 suffix-50">
+					<button class="button inline upload u-margin-top-30 upload_button">
+						<i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA
+					</button>
+				</div>
+				<div class="grid-50">
+					<button class="button inline upload u-margin-top-30 upload_button">
+						<i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA
+					</button>
+				</div>
+				<div class="grid-50">
+					<button class="button inline upload u-margin-top-30 upload_button" data-color="red">
+						<i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR OBRA
+					</button>
+				</div>
+			</div>
+	</div>
 </div>
 {% endblock %}
 
