--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1303,6 +1303,24 @@ body
 			border solid 1px black
 			box-shadow 1px 2px 1px 0px rgba(black, 0.5)
 			margin 20px auto
+		&.inline
+			margin 5px auto
+			padding 8px 10px
+			display: flex;
+			align-items: center;
+			&[data-color="green"]
+				background #85d78d
+				color white
+			&[data-color="red"]
+				background #ff6666
+				color white
+			i
+				font-size 2em
+
+	.work-collection-card
+		max-width: 220px;
+		margin-left: auto;
+		margin-right: auto;
 
 	.separator
 		font-family 'Montserrat', sans-serif
