--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -104,6 +104,88 @@
 				</div>
 			</div>
 	</div>
+
+	<div class="am-upload-work-box grid-container u-margin-top-20">
+		<div class="grid-100">
+			<p class="main-title"><i class="bi_ecommerce-shop"></i>&nbsp;&nbsp;VENDE TU TRABAJO</p>
+			<div class="u-separator"></div>
+			<div class="work-collection-card u-margin-top-40">
+				<div class="work-collection-card-img">
+					<img src="/img/works/work9.jpg">
+				</div>
+				<div class="work-collection-card-data">
+					<p class="work-collection-card-title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</p>
+					<p class="work-collection-card-artist">Sergio Gonzales Mucho</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="grid-100">
+			<div class="separator u-margin-top-20">
+				<span class="line"></span><span class="text">VENDER ARTE ORIGINAL</span><span class="line"></span>
+			</div>
+		</div>
+
+		<div class="grid-50 sufix-50">
+			<p class="title">Elige la moneda</p>
+			<select class="input select" name='categoryId'>
+				<option value="">Nuevos Soles (PEN)</option>
+				<option value="">Nuevos Soles (PEN)</option>
+				<option value="">Nuevos Soles (PEN)</option>
+			</select>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">Ingresa tu ganancia</p>
+			<div class="operators">
+				<div class="box">
+					<div class="input container">
+						<textarea rows="3" placeholder="cuanto deseas ganar"></textarea>
+					</div>
+				</div>
+				<div class="simbol">+</div>
+				<div class="box">
+					<p>Ganamos si tu ganas (30%)</p>
+				</div>
+				<div class="simbol">=</div>
+				<div class="box">
+					<input class="input" placeholder="Total">
+				</div>
+			</div>
+			<div class="operators-desc u-margin-top-10">
+				<p>GANANCIA DEL ARTISTA</p>
+				<p>COMISIÓN ARTE MANIFIESTO</p>
+				<p>PRECIO DE LISTA OBRA</p>
+			</div>
+		</div>
+
+		<div class="grid-100 u-margin-top-20">
+			<div class="separator">
+				<span class="line"></span><span class="text">DATOS DEL ENVÍO</span><span class="line"></span>
+			</div>
+		</div>
+
+		<div class="grid-100">
+			<p class="sub-title">Ingresa datos exactos para hacer un mejor cálculo del envío y el manejo de la obra, incluyendo el peso del empaque</p>
+		</div>
+
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Ancho</p>
+			<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
+		</div>
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Largo</p>
+			<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
+		</div>
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Profundidad</p>
+			<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
+		</div>
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Peso</p>
+			<input name='name' class="input" type="text" placeholder="Cuantos kilos pesa"/>
+		</div>
+	</div>
 </div>
 {% endblock %}
 
