add defout image in complete profile

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1128,6 +1128,30 @@ body
 	.select
 		padding 12px 15px
 
+	.profile-imgage
+		display table
+		margin auto
+		position relative
+		i
+			position absolute
+			cursor pointer
+			color #979797
+			right 0
+			font-size 1.25em
+		img
+			width 180px
+			height 180px
+			border-radius 50%
+			border solid 3px #979797
+
+	.preload
+		text-align center
+		margin-top 20px
+		i
+			color: #aaa;
+			font-size: 1.25em;
+			animation 1.5s load infinite
+
 	.button
 		border-radius 4px
 		font-weight bold
