--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -7,7 +7,16 @@
 
 			<div class="grid-100">
 				<p class="title">Elige tu foto de perfil:</p>
+
+				<div class="profile-imgage">
+					<i class="fa fa-times"></i>
+					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70/am_avatar.jpg">
+				</div>
+
 				<button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
+
+				<div class="preload"><i class="fa fa-spinner"></i></div>
+
 				<p class="title">Nombre como artista</p>
 				<input class="input" type="text" placeholder="Ingresa tu nombre de artista, pseudónimo o alter ego"/>
 				<p class="title">Nombre</p>
