--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -104,32 +104,75 @@
 			</div>
 
 			<div class="interests">
-				<div class="interest" style="background-image: url('/img/interests/interest1.jpg')">
-					<div class="cover"><p>Pintura y Técnica mixta</p></div>
+				<div>
+					<input type="checkbox" name="interest" id="interest-1"/>
+					<label for="interest-1">
+						<div class="interest" style="background-image: url('/img/interests/interest1.jpg')">
+							<div class="cover"><p>Pintura y Técnica mixta</p></div>
+						</div>
+					</label>
 				</div>
-				<div class="interest selected" style="background-image: url('/img/interests/interest2.jpg')">
-					<div class="cover"><p>Diseño e Ilustración</p></div>
+				<div>
+					<input type="checkbox" name="interest" id="interest-2" checked/>
+					<label for="interest-2">
+						<div class="interest" style="background-image: url('/img/interests/interest2.jpg')">
+							<div class="cover"><p>Diseño e Ilustración</p></div>
+						</div>
+					</label>
 				</div>
-				<div class="interest" style="background-image: url('/img/interests/interest3.jpg')">
-					<div class="cover"><p>Collage</p></div>
+				<div>
+					<input type="checkbox" name="interest" id="interest-3"/>
+					<label for="interest-3">
+						<div class="interest" style="background-image: url('/img/interests/interest3.jpg')">
+							<div class="cover"><p>Collage</p></div>
+						</div>
+					</label>
 				</div>
-				<div class="interest" style="background-image: url('/img/interests/interest4.jpg')">
-					<div class="cover"><p>Fotografía</p></div>
+				<div>
+					<input type="checkbox" name="interest" id="interest-4"/>
+					<label for="interest-4">
+						<div class="interest" style="background-image: url('/img/interests/interest4.jpg')">
+							<div class="cover"><p>Fotografía</p></div>
+						</div>
+					</label>
 				</div>
-				<div class="interest" style="background-image: url('/img/interests/interest5.jpg')">
-					<div class="cover"><p>Street Art</p></div>
+				<div>
+					<input type="checkbox" name="interest" id="interest-5"/>
+					<label for="interest-5">
+						<div class="interest" style="background-image: url('/img/interests/interest5.jpg')">
+							<div class="cover"><p>Street Art</p></div>
+						</div>
+					</label>
 				</div>
-				<div class="interest selected" style="background-image: url('/img/interests/interest6.jpg')">
-					<div class="cover"><p>Arte Digital</p></div>
+					<input type="checkbox" name="interest" id="interest-6" checked/>
+					<label for="interest-6">
+					<div class="interest" style="background-image: url('/img/interests/interest6.jpg')">
+						<div class="cover"><p>Arte Digital</p></div>
+					</div>
+					</label>
+				<div>
+					<input type="checkbox" name="interest" id="interest-7"/>
+					<label for="interest-7">
+						<div class="interest" style="background-image: url('/img/interests/interest7.jpg')">
+							<div class="cover"><p>Dibujo</p></div>
+						</div>
+					</label>
 				</div>
-				<div class="interest" style="background-image: url('/img/interests/interest7.jpg')">
-					<div class="cover"><p>Dibujo</p></div>
+				<div>
+					<input type="checkbox" name="interest" id="interest-8"/>
+					<label for="interest-8">
+						<div class="interest" style="background-image: url('/img/interests/interest8.jpg')">
+							<div class="cover"><p>Esculturas</p></div>
+						</div>
+					</label>
 				</div>
-				<div class="interest" style="background-image: url('/img/interests/interest8.jpg')">
-					<div class="cover"><p>Esculturas</p></div>
-				</div>
-				<div class="interest" style="background-image: url('/img/interests/interest9.jpg')">
-					<div class="cover"><p>Grabados</p></div>
+				<div>
+					<input type="checkbox" name="interest" id="interest-9"/>
+					<label for="interest-9">
+						<div class="interest" style="background-image: url('/img/interests/interest9.jpg')">
+							<div class="cover"><p>Grabados</p></div>
+						</div>
+					</label>
 				</div>
 			</div>
 
